fixed overflow background color

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -33,6 +33,11 @@
   --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+html {
+  min-height: 100%;
+  min-width: 100%;
+}
+
 body {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   background-color: var(--background-color);
@@ -41,10 +46,10 @@ body {
   align-items: center;
   flex-direction: column;
   color: var(--text-color);
-  padding: 0px;
-  margin: 0px;
-  height: 100dvh;
-  width: 100dvw;
+  padding: 0;
+  margin: 0;
+  min-height: 100dvh;
+  min-width: 100dvw;
 }
 
 div {
